# lunar-auth-provider

./: .env  Cargo.toml  README.md
migrations/: 0.0.1_init.down.sql  0.0.1_init.up.sql  V1__init.sql  V2__create_role.sql
src/: main.rs
src/database/: mod.rs
src/database/configuration/: mod.rs  mysql_db_config.rs
src/database/model/: app_user.rs
src/logger/: log4rs.rs  mod.rs
src/routes/: app_route.rs  auth_route.rs  mod.rs
src/user/handlers/: auth_handler.rs  create_user_dto.rs  mod.rs  user_handler.rs  user_service.rs
src/user/routes/: app_route.rs  mod.rs
